5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4490/executions/1592_820.log
== SUBMITION (2019-04-01 15:24:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input()

# Quantidade de notas de R$ 50
notas_R$50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.203611
-- ERROR:
  File "/home/codebench/codes/1592/820/main.py", line 8
    notas_R$50 = valor // 50 
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input()

# Quantidade de notas de R$ 50
notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.304961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/820/main.py", line 8, in <module>
    notas_R50 = valor // 50 
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input()

# Quantidade de notas de R$ 50
notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_R50 = valor // 50 
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:26:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input())

# Quantidade de notas de R$ 50
notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.114385
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
